--- a/index.html
+++ b/index.html
@@ -1,1 +1,306 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>TRACKRA – Smart Map</title>
+
+<!-- Leaflet -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
+<link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.css"/>
+
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+<style>
+*{margin:0;padding:0;box-sizing:border-box;font-family:Poppins;}
+html{scroll-behavior:smooth;}
+body{
+  background:linear-gradient(135deg,#1e3c72,#2a5298);
+  color:#fff;
+}
+
+/* HEADER */
+header{
+  position:fixed;
+  top:0;left:0;
+  width:100%;
+  height:70px;
+  background:#00000099;
+  backdrop-filter:blur(10px);
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:0 25px;
+  z-index:1000;
+}
+header h1{font-size:22px;}
+nav a{color:#fff;margin:0 12px;text-decoration:none;}
+nav a:hover{color:#38bdf8;}
+
+/* HERO */
+.hero{
+  height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  text-align:center;
+  padding-top:70px;
+}
+.hero h2{font-size:48px;}
+.hero p{max-width:600px;margin:20px auto;}
+.hero button{
+  padding:14px 30px;
+  border:none;
+  border-radius:30px;
+  background:#38bdf8;
+  cursor:pointer;
+}
+
+/* MAP */
+#map-section{
+  background:#fff;
+  color:#000;
+}
+.controls{
+  position:sticky;
+  top:70px;
+  background:#ffffffee;
+  padding:10px;
+  z-index:500;
+}
+.controls input{
+  width:100%;
+  padding:10px;
+  border-radius:8px;
+  border:1px solid #ccc;
+}
+.buttons{
+  display:flex;
+  flex-wrap:wrap;
+  gap:8px;
+  margin-top:8px;
+}
+.buttons button{
+  padding:8px 12px;
+  border:none;
+  border-radius:20px;
+  background:#2563eb;
+  color:#fff;
+  font-size:12px;
+  cursor:pointer;
+}
+#map{
+  width:100%;
+  height:calc(100vh - 200px);
+}
+
+/* ABOUT + FOOTER */
+#about{padding:80px 20px;background:#020617;text-align:center;}
+footer{padding:15px;background:#020617;text-align:center;}
+
+@media(max-width:768px){
+  .hero h2{font-size:34px;}
+  #map{height:calc(100vh - 300px);}
+}
+</style>
+</head>
+
+<body>
+
+<header>
+  <h1>TRACKRA</h1>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#map-section">Map</a>
+    <a href="#about">About</a>
+  </nav>
+</header>
+
+<section class="hero" id="home">
+  <div>
+    <h2>Welcome to TRACKRA</h2>
+    <p>Smart navigation with hazards, traffic & accident alerts</p>
+    <button onclick="document.getElementById('map-section').scrollIntoView()">Get Started</button>
+  </div>
+</section>
+
+<section id="map-section">
+  <div class="controls">
+    <input id="searchInput" placeholder="Search location...">
+    <div class="buttons">
+      <button onclick="searchLocation()">Search</button>
+      <button onclick="nearby('hospital')">Hospitals</button>
+      <button onclick="nearby('fuel')">Petrol</button>
+      <button onclick="nearby('police')">Police</button>
+      <button onclick="nearby('restaurant')">Restaurants</button>
+      <button onclick="locateMe()">Locate Me</button>
+      <button onclick="getDirections()">Directions</button>
+      <button onclick="showPotholes()">Potholes</button>
+      <button onclick="showSpeedBreakers()">Speed Breakers</button>
+      <button onclick="showWaterlogging()">Waterlogging</button>
+      <button onclick="showHighTraffic()">High Traffic</button>
+      <button onclick="checkWeather()">Weather</button>
+    </div>
+  </div>
+  <div id="map"></div>
+</section>
+
+<section id="about">
+  <h2>About TRACKRA</h2>
+  <p>TRACKRA highlights real-world road hazards and traffic to make travel safer.</p>
+</section>
+
+<footer>© 2026 TRACKRA</footer>
+
+<!-- JS -->
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+<script src="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.js"></script>
+
+<script>
+/* MAP INIT */
+const map = L.map('map',{zoomControl:false}).setView([28.6139,77.2090],12);
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
+
+/* GLOBAL STATE */
+let searchedLocation=null;
+let currentLocation=null;
+let routingControl=null;
+
+/* LAYERS */
+const potholeLayer=L.layerGroup().addTo(map);
+const speedLayer=L.layerGroup().addTo(map);
+const waterLayer=L.layerGroup().addTo(map);
+const trafficLayer=L.layerGroup().addTo(map);
+
+/* MOCK DATA */
+const potholes=[[28.614,77.21],[28.618,77.215]];
+const speedBreakers=[[28.617,77.208]];
+const waterlogging=[[28.619,77.218]];
+const trafficZones=[[28.610,77.220]];
+const accidents=[[28.615,77.21]];
+
+/* HELPERS */
+function clearHazards(){
+  potholeLayer.clearLayers();
+  speedLayer.clearLayers();
+  waterLayer.clearLayers();
+  trafficLayer.clearLayers();
+}
+function getBase(){
+  if(searchedLocation) return searchedLocation;
+  if(currentLocation) return currentLocation;
+  alert("Search or Locate first");
+  return null;
+}
+
+/* SEARCH */
+function searchLocation(){
+  fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${searchInput.value}`)
+  .then(r=>r.json()).then(d=>{
+    if(!d.length)return alert("Location not found");
+    searchedLocation=[+d[0].lat,+d[0].lon];
+    map.setView(searchedLocation,14);
+    L.marker(searchedLocation).addTo(map)
+      .bindPopup("Searched Location").openPopup();
+  });
+}
+
+/* LOCATE */
+function locateMe(){
+  navigator.geolocation.getCurrentPosition(pos=>{
+    currentLocation=[pos.coords.latitude,pos.coords.longitude];
+    map.setView(currentLocation,15);
+    L.marker(currentLocation).addTo(map)
+      .bindPopup("You are here").openPopup();
+    checkAccident();
+  });
+}
+
+/* NEARBY */
+function nearby(type){
+  const base=getBase(); if(!base) return;
+  fetch(`https://nominatim.openstreetmap.org/search?format=json&amenity=${type}&limit=5&lat=${base[0]}&lon=${base[1]}`)
+  .then(r=>r.json()).then(d=>{
+    d.forEach(p=>{
+      L.marker([p.lat,p.lon]).addTo(map)
+      .bindPopup(p.display_name);
+    });
+  });
+}
+
+/* DIRECTIONS */
+function getDirections(){
+  if(!searchedLocation||!currentLocation) return alert("Search & Locate first");
+  if(routingControl) map.removeControl(routingControl);
+  routingControl=L.Routing.control({
+    waypoints:[L.latLng(currentLocation),L.latLng(searchedLocation)],
+    lineOptions:{styles:[{color:"green",weight:6}]}
+  }).addTo(map);
+}
+
+/* HAZARDS */
+function showPotholes(){
+  clearHazards();
+  potholes.forEach(p=>{
+    L.circleMarker(p,{radius:8,color:"red",fillOpacity:.9})
+      .addTo(potholeLayer).bindPopup("🚧 Pothole");
+  });
+  map.fitBounds(potholeLayer.getBounds(),{padding:[40,40]});
+}
+
+function showSpeedBreakers(){
+  clearHazards();
+  speedBreakers.forEach(p=>{
+    L.circleMarker(p,{radius:8,color:"yellow",fillOpacity:.9})
+      .addTo(speedLayer).bindPopup("⚠ Speed Breaker");
+  });
+  map.fitBounds(speedLayer.getBounds(),{padding:[40,40]});
+}
+
+function showWaterlogging(){
+  clearHazards();
+  waterlogging.forEach(p=>{
+    L.circle(p,{radius:400,color:"brown",fillOpacity:.4})
+      .addTo(waterLayer).bindPopup("🌧 Waterlogging");
+  });
+  map.fitBounds(waterLayer.getBounds(),{padding:[40,40]});
+}
+
+function showHighTraffic(){
+  clearHazards();
+  trafficZones.forEach(p=>{
+    L.circle(p,{radius:600,color:"red",fillOpacity:.35})
+      .addTo(trafficLayer).bindPopup("🚦 High Traffic");
+  });
+  map.fitBounds(trafficLayer.getBounds(),{padding:[40,40]});
+}
+
+/* WEATHER */
+function checkWeather(){
+  const base=getBase(); if(!base) return;
+  const key="YOUR_OPENWEATHER_API_KEY";
+  fetch(`https://api.openweathermap.org/data/2.5/weather?lat=${base[0]}&lon=${base[1]}&appid=${key}`)
+  .then(r=>r.json()).then(d=>{
+    if(d.visibility && d.visibility<1000)
+      alert(`⚠ Visibility ${d.visibility}m (Fog/Rain)`);
+    else alert("Weather clear");
+  });
+}
+
+/* ACCIDENT */
+function checkAccident(){
+  accidents.forEach(a=>{
+    const dist=map.distance(currentLocation,a);
+    if(dist<=1000){
+      L.popup({closeButton:true})
+        .setLatLng(currentLocation)
+        .setContent("🚨 Accident reported within 1km!")
+        .openOn(map);
+    }
+  });
+}
+</script>
+
+</body>
+</html>
 
