--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="t3offTk007ECMolUGHI5AyL5Ko1GciIVq7XBUzgt3Xg" />
-<title>TRACKRA – The Smart Map</title>
+<title>TRACKRA – Smart Map</title>
 
 <!-- Leaflet -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
